--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 /* common styles */
 img {
     width: 100%;
-    box-shadow: 0 0 98px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 98px 6px rgba(104, 103, 103, 0.2);
 }
 
 a {
@@ -51,6 +51,7 @@ a {
     font-size: 1.4rem;
     color: var(--text-color);
     font-weight: 300;
+    margin-top: 2rem;
 }
 
 .item_title {
@@ -75,7 +76,7 @@ a {
     padding: 5rem;
     /* background: #070707; */
     /* background: white; */
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     gap: 4rem;
 }
 
@@ -298,4 +299,8 @@ hr {
 
 .footer_icon{
     font-size: 1.2rem;
+}
+
+.certification-link{
+    color: black;
 }
